--- a/index.html
+++ b/index.html
@@ -2,14 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css" />
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/phaser.js"></script>
     <title>who R U</title>
 </head>
 <body>
-    <div id='game'></div>
+    <div id='game'>
+        <div id='chat'>
+            <div id="chatWindow">
+            </div>
+            <form id="messageForm">
+                <input type="text" size="35" id="message" placeholder="Devines qui je suis...">
+                <input type="submit" value="Envoyer">
+            </form>
+        </div>
+    </div>    
 </body>
 <script src="js/game.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 <script src="js/client.js" type="text/javascript"></script>
+    <script>
+            $(function(){
+                var socket = io.connect();
+                var $messageForm = $('#messageForm');
+                var $message = $('#message');
+                
+                $messageForm.submit(function(e){
+                    e.preventDefault();
+                    socket.emit('send message', $message.val());
+                    $message.val('');
+                });
+                socket.on('new message', function(data){
+                    $chat.append('<strong>'+data.user+': </strong>'+data.msg+'<br>');
+                });
+            });
+        </script>
 </html>
