--- a/index.html
+++ b/index.html
@@ -8,25 +8,32 @@
     <title>who R U</title>
 </head>
 <body>
+    <header>
+        <h1> WHO R U ?? </h1>
+    </header>
     <div id='game'>
         <div id='chat'>
             <div id="chatWindow">
             </div>
             <form id="messageForm">
-                <input type="text" size="35" id="message" placeholder="Devines qui je suis...">
+                <input type="text" size="35" id="message" placeholder="   Devines qui je suis...">
                 <input type="submit" value="Envoyer">
             </form>
         </div>
-    </div>    
+    </div>
+    <footer>
+    </footer>    
 </body>
 <script src="js/game.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 <script src="js/client.js" type="text/javascript"></script>
+ <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script>
             $(function(){
                 var socket = io.connect();
                 var $messageForm = $('#messageForm');
                 var $message = $('#message');
+                var $chat = $('#chatWindow');
                 
                 $messageForm.submit(function(e){
                     e.preventDefault();
@@ -34,7 +41,7 @@
                     $message.val('');
                 });
                 socket.on('new message', function(data){
-                    $chat.append('<strong>'+data.user+': </strong>'+data.msg+'<br>');
+                    $chat.append('<strong>mpigeon: </strong>'+data.msg+'<br>');
                 });
             });
         </script>
